@@ -1,8 +1,9 @@
-2018-04-16
+2018-04-26
 
         * Version 1.6.0 released
         ========================
 
+        Increase integration precision for CTA diffuse model response (#2458)
         Add GCTAModelRadialAcceptance model component setter methods
         Keep existing library path in installation script on Mac OS X (#2420)
         Add GCTAEdisp::prob_erecobin() method (#2422)
